css/styles.css
@charset "utf-8";
/* CSS Document */

:root {
  --color-fg: #333;
  --color-bg: #f3f3f3;
  --color-brand: #a52822;
  --color-brand-light: #de655e;
  --color-brand-dark: #252831;
  --color-blue: #3397db;
  --color-missing: #ccc;
}

html,
body,
main,
section,
header,
nav,
footer {
  width: 100%;
}

body, select {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 16pt;
  line-height: 1.5;
}

body {
  position: relative;
  margin: 0;
  color: var(--color-fg);
  background-color: var(--color-bg);
}

a {
  color: var(--color-brand-light);
  text-decoration: none;
}

a:hover,
a:focus {
  color: var(--color-blue);
  text-decoration: none;
}

a img {
  border: none 0px #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 20px;
}

article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

main {
  min-height: 100%;
}

/* ====================== Navigation ====================== */
header {
  background-color: #eee;
}

nav {
  background-color: var(--color-brand-dark);
  width: 100%;
  margin: 0 auto;
  text-align:center;
  display: flex;
  align-items: center;
  justify-content: center;
}

nav h1 {
  padding: 20px;
  margin: 0;
}

@media screen and (max-width: 359px) {
  nav h1 {
    font-size: 1.2em;
  }
}

@media screen and (min-width: 591px) {
  nav h1 {
    padding: 30px 20px;
  }
}

nav h1 a {
  color: white;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}

.breadcrumb {
  max-width: 1300px;
  margin: 0 auto;
  padding: 16px 24px;
  list-style: none;
}

/* Display list items side by side */
.breadcrumb li {
  display: inline;
}

/* Add a chevron symbol (›) before/behind each list item */
.breadcrumb li+li:before {
  font-weight: bold;
  padding: 8px;
  content: "›";
}

/* Add a color to all links inside the list */
.breadcrumb li a {
  color: var(--color-brand);
  text-decoration: none;
}

/* Add a color on mouse-over */
.breadcrumb li a:hover {
  color: var(--color-blue);
  text-decoration: none;
}


/* ====================== Map ====================== */
.map {
  height: 400px;
  width: 100%;
  background-color: var(--color-missing);
}


/* ====================== Restaurant Filtering ====================== */
.filter-container {
  width: 100%;
  background-color: var(--color-blue);
}

.filter-options {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
  max-width: 1600px;
  margin: 0 auto;
  align-items: center;
  padding: 5px 0;
}

.filter-options h2 {
  color: white;
  font-size: 1.2em;
  font-weight: normal;
  line-height: 1;
  margin: 10px 20px;
  width: 100%;
}

.filter-options select {
  background-color: white;
  border: 1px solid white;
  height: 35px;
  letter-spacing: 0;
  margin: 5px 10px;
  padding: 0 10px;
  width: 100%;
}

@media screen and (min-width: 768px) {
  .filter-options {
    flex-wrap: nowrap;
  }

  .filter-options select {
    flex-grow: 1;
    margin-left: 0;
  }
}

/* ====================== Big Brand Button ======================= */
.brand-button {
  display: inline-block;
  background-color: var(--color-brand);
  color: white;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  line-height: 48px;
  min-height: 48px;
  padding: 0;
}

/* ========================== Card Layout ======================== */
.card-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: start;
  margin: 0 auto;
  padding: 10px;
  background-color: var(--color-bg);
  list-style: outside none none;
  max-width: 1600px;
}

.card {
  width: 100%;
  background-color: white;
  margin: 5px 5px 10px;
  padding: 0;
  border-radius: 25px 5px;
  min-height: 380px;
  overflow: hidden;
  display: block;
}

.card-header {
  background-color: var(--color-brand-dark);
  color: white;
  font-size: 1.2em;
  padding: 10px 20px;
}

@media screen and (min-width: 591px) {
  .card-container {
    padding: 20px;
  }

  .card {
    margin: 5px 5px 20px;
  }
}

@media screen and (min-width: 768px) {
  .card {
    width: calc(50% - 2 * 10px);
    margin: 10px;
  }
}

@media screen and (min-width: 1300px) {
  .card {
    width: calc(33% - 2 * 10px);
  }
}

/* ====================== Restaurant Listing ====================== */
.restaurant-img {
  max-width: 100%;
  margin: 0;
}

.restaurants-list .restaurant-img {
  background-color: var(--color-missing);
  display: block;
  max-width: 100%;
  min-height: 248px;
  min-width: 100%;
}

.restaurants-list li {
  text-align: center;
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
}

.restaurants-list h2 {
  color: var(--color-brand);
  font-weight: 200;
  letter-spacing: 0;
  text-transform: uppercase;
  line-height: 1.2em;
  text-align: center;
  width: 80%;
  margin: 10px auto;
  flex-grow: 1;
}

.restaurants-list p {
  text-align: center;
  margin: 0 10px;
}

.restaurants-list .restaurant-address {
  border-bottom: 1px solid var(--color-bg);
  padding-bottom: 10px;
  flex-grow: 1;
}

.restaurants-list a {
  margin: 5px;
  width: calc(100% - 2 * 5px);
  border-radius: 5px 5px 25px 5px;
}

/* ====================== Restaurant Details ====================== */
.inside header {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2000;
}

.inside .map-container {
  background: blue none repeat scroll 0 0;
  width: 100%;
  height: 300px;
}

.inside main {
  margin-top: 199px;
}

@media screen and (max-width: 359px) {
  .inside main {
    margin-top: 179px;
  }
}

@media screen and (min-width: 591px) {
  .inside main {
    margin-top: 171px;
  }
}

.inside .map {
  background-color: var(--color-missing);
  height: 100%;
  width: 100%;
}

.restaurant-container {
  display: flex;
  flex-flow: column nowrap;
  margin: 0 auto;
  padding: 10px;
  width: calc(100% - 2 * 10px);
  max-width: 1024px;
  border-bottom: 1px solid #d9d9d9;
}

.restaurant-img-cuisine,
.restaurant-hours-address {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
}

@media screen and (min-width: 591px) {
  .restaurant-container {
    padding: 20px;
    width: calc(100% - 2 * 20px);
  }
}

@media screen and (min-width: 768px) {
  .restaurant-container {
    flex-flow: row wrap;
    justify-content: space-around;
  }

  .inside .restaurant-img-cuisine,
  .inside .restaurant-hours-address {
    width: calc(50% - 20px);
  }

  .inside .restaurant-hours h3 {
    margin-top: 0;
    line-height: 1.3em;
  }
}

@media screen and (min-width: 1300px) {
  .inside .restaurant-hours {
    margin-bottom: 20px;
  }
}

.inside h2 {
  width: 100%;
  color: var(--color-brand);
  font-size: 1.6em;
  line-height: 1.2em;
  padding: 5px;
  font-weight: normal;
  letter-spacing: 0;
  text-align: center;
  text-transform: uppercase;
  margin: 10px auto;
}

@media screen and (min-width: 591px) {
  .inside h2 {
    font-size: 2em;
    margin: 15px auto 20px;
  }
}

.inside .restaurant-img {
  border-radius: 25px 5px;
}

.inside h3 {
  color: var(--color-brand);
  margin: 10px 5px 5px;
}

.inside p {
  margin: 0 10px;
}

.restaurant-hours table {
  margin: 0;
  border: none;
  width: 100%;
  max-width: 400px;
}

.restaurant-hours tr {
  vertical-align: top;
}

.restaurant-hours td:nth-child(even) {
  text-align: right;
  /*
   * Where multiple time ranges are given, we want them to split on the commas.
   * At our chosen font size, 200px is a suitable width to ensure this.
   */
  width: 200px;
}

/* ====================== Restaurant Reviews ====================== */

.reviews-container {
  border-top: 1px solid #fff;
}

.reviews-container h3 {
  color: var(--color-brand);
  font-size: 1.6em;
  font-weight: normal;
  text-align: center;
  letter-spacing: -1px;
  padding-bottom: 1pt;
  padding: 0 20px;
  margin: 20px 0 0;
}

@media screen and (min-width: 591px) {
  .reviews-container h3 {
    font-size: 2em;
  }
}

.reviews-list li p {
  margin: 0 0 10px;
}

.review-header {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.review-name {
  flex-grow: 1;
}

.review-date {
  order: 10;
  font-size: 0.8em;
  font-variant: small-caps;
  width: 40%;
  text-align: right;
}

.review-rating {
  color: var(--color-brand-light);
  flex-grow: 0;
}

@media screen and (max-width: 591px) {
  .review-date {
    width: 100%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .review-date {
    width: 100%;
  }
}

.review-text {
  padding: 10px 15px;
}

/* ====================== Footer ====================== */
footer {
  background-color: var(--color-fg);
  color: var(--color-bg);
  letter-spacing: 1px;
  text-align: center;
  text-transform: uppercase;
  padding: 25px 20px 25px;
  box-sizing: border-box;
}

